# sfml_collection

./: .gitignore  CMakeLists.txt  README.md
hordes/: CMakeLists.txt  conf.h.in
hordes/src/: algorithm.h  conf.h  game.cpp  game.h  main.cpp
hordes/src/entities/: entity.h  hero.cpp  hero.h
hordes/src/states/: game_state.cpp  game_state.h  state.cpp  state.h
